--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mealspy</title>
+    <title>MealSpy</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/assets/favicon.png" />
+
+    <!-- Optional: meta description -->
+    <meta name="description" content="MealSpy - Compare Swiggy and Zomato cart prices easily." />
   </head>
   <body>
+    <!-- React will render your app here -->
     <div id="root"></div>
+
+    <!-- Vite scripts -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
